@@ -182,7 +182,9 @@ if test "$enable_gui" == "no"
                         AC_DEFINE([GTKMM_VER],26))])])
 
         PKG_CHECK_MODULES(GLIBMM,  glibmm-2.4 >= 2.16.0,
-                  [AC_DEFINE([GLIBMM_VER],216)])
+                  [AC_DEFINE([GLIBMM_VER],216)],
+                  [AC_DEFINE([GLIBMM_VER],old)
+                  echo "Using old glibmm"])
 dnl		  PKG_CHECK_MODULES([gtkmm], [gtkmm-2.4]) 
 dnl        if test "x`pkg-config --modversion gtkmm-2.4 | grep 2.8`" == "x" ; then
 dnl	  	    AC_DEFINE([GTKMM_GEQ_28], 0, [Defined if Gtkmm's version is 2.8 or greater]) 
