@@ -185,7 +185,7 @@
 \pagestyle{empty}
 \begin{flushright}
 original: July 2006\\
-this version: October 3rd, 2008\\
+this version: December 23rd, 2008\\
 AEI-2006-038
 \end{flushright}
 \vspace{6ex}
