@@ -22,7 +22,7 @@ product-like objects. For example, if we declare
 f{#}::WeightInherit(label=all, type=Multiplicative).
 A::Weight(label=field, value=3).
 \end{screen}
-then the expression~\verbf|f{A}{A}| has weight~6. This is what would
+then the expression~\verb|f{A}{A}| has weight~6. This is what would
 happen if `\verb|f|' would be a product: the weight of the product is the same
 as the sum of the weights of the factors.
 
