@@ -35,7 +35,7 @@
 
 <p>
   
-    <a href="unassigned.html">Ten unassigned issues</a> (ten open).
+    <a href="unassigned.html">11 unassigned issues</a> (11 open).
   
 </p>
 
@@ -47,6 +47,15 @@
   <tbody>
   
     <tr class="even-row">
+      <td class="date">2009-01-03</td>
+      <td class="issuename">
+        <a href="issue-f896ffe43c8b780b98fde4d37b71d683af775a99.html">@canonicalise does not honor ImplicitIndex</a> 
+      </td>
+      <td> created </td>
+    </tr>
+    <tr><td></td></tr>
+  
+    <tr class="odd-row">
       <td class="date">2008-12-11</td>
       <td class="issuename">
         <a href="issue-67f410348cb3e122b6f7541db7fccddb3cc08e9e.html">Introduce a notation for 'a range of objects'</a> 
@@ -55,7 +64,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2008-11-24</td>
       <td class="issuename">
         <a href="issue-248630fcbe40bd59f52429e99de2b43488b5e8b8.html">Nested \partial's do not always flatten automatically.</a> 
@@ -64,7 +73,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2008-11-17</td>
       <td class="issuename">
         <a href="issue-9bc33d2ce36bc0dd67c03d09cc1c2ab5e9eba099.html">Single-factor replacements with dummy names fail.</a> 
@@ -73,7 +82,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2008-11-14</td>
       <td class="issuename">
         <a href="issue-becb40c03914860dbc07ef30bb8fb898a9089a73.html">@eliminate_kr does not work on sums</a> 
@@ -82,7 +91,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2008-11-14</td>
       <td class="issuename">
         <a href="issue-275e6042623fde84879a0c1864f064559562ed3c.html">XCadabra breaks when a .cadabra is present</a> 
@@ -91,7 +100,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2008-08-29</td>
       <td class="issuename">
         <a href="issue-b992ba2a0e28143cf1a66c11a8c4284df71bad33.html">Add support for differential 'd'</a> 
@@ -100,7 +109,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
+    <tr class="odd-row">
       <td class="date">2008-08-25</td>
       <td class="issuename">
         <a href="issue-21fdb7347ae291cf9d98ff53c123057a20a0521d.html">Ask user before overwriting existing files.</a> 
@@ -109,7 +118,7 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="odd-row">
+    <tr class="even-row">
       <td class="date">2008-08-24</td>
       <td class="issuename">
         <a href="issue-15e3e1b9b66a3841c79e43937e91a0f2ada5ae2b.html">Cursor position after crash</a> 
@@ -118,21 +127,12 @@
     </tr>
     <tr><td></td></tr>
   
-    <tr class="even-row">
-      <td class="date">2008-08-24</td>
-      <td class="issuename">
-        <a href="issue-3a0fb777111329baf741dde7dc04fd19ea4885d6.html">Multiple-level undo in GUI</a> <img class="inline-status-image" src="green-bar.png" title="in progress" alt="in progress"/>
-      </td>
-      <td> changed status from unstarted to in_progress </td>
-    </tr>
-    <tr><td></td></tr>
-  
     <tr class="odd-row">
       <td class="date">2008-08-24</td>
       <td class="issuename">
-        <a href="issue-dcc4c5a2bbebd03459ee53b5ebbc6132fe4f560d.html">@factor_out problems with tensors</a> 
+        <a href="issue-3a0fb777111329baf741dde7dc04fd19ea4885d6.html">Multiple-level undo in GUI</a> <img src="green-bar.png" class="inline-status-image" title="in progress" alt="in progress"/>
       </td>
-      <td> created </td>
+      <td> changed status from unstarted to in_progress </td>
     </tr>
     <tr><td></td></tr>
   
