@@ -66,7 +66,7 @@ All actions in the GUI should be undo/redo-able.</p>
       <td class="attrname">Status:</td>
       <td class="attrval">
         in progress
-        <img class="inline-status-image" src="green-bar.png" title="in progress" alt="in progress"/>
+        <img src="green-bar.png" class="inline-status-image" title="in progress" alt="in progress"/>
       </td>
     </tr>
 
