@@ -20,6 +20,21 @@
   
     <tr>
       <td>  </td>
+      <td class="littledate">2009-01-03</td>
+      <td class="issuename">
+        <a href="issue-f896ffe43c8b780b98fde4d37b71d683af775a99.html">@canonicalise does not honor ImplicitIndex</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
+      <td>  </td>
       <td class="littledate">2008-12-11</td>
       <td class="issuename">
         <a href="issue-67f410348cb3e122b6f7541db7fccddb3cc08e9e.html">Introduce a notation for 'a range of objects'</a>
